# intercept-anything

./: .clang-format  .gdb_history  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  aarch64_cross_toolchain.cmake  bin2h.cmake  build.sh  common.h  compile_flags.txt  config.h  confstr.c  cxxcompat.c  cxxcompat.cpp  emulate_file_tmp.cpp  emulate_swap  emulate_swap_main.c  execve_here.c  execve_here.cpp  execve_here_test.c  execve_here_test.cpp  execve_thread_test.c  execve_thread_test.cpp  hardlinkshim.c  hardlinkshim.h  intercept.h  intercept_glibc.c  intercept_seccomp.c  intercept_seccomp.cpp  libc_external_thread_test.c  libc_tls_stresstest.c  libc_tls_test.c  libc_tls_test2.c  libexecve_here.c  libexecve_thread.c  libexecve_thread.cpp  libexecve_thread_jni.cpp  loader.c  (+62 more)
androidislinux_tool/: androidislinux.c  androidislinux.cpp  androidislinux_main.cpp  hardlinkshim.c  hardlinkshim.cpp  hardlinkshim_main.cpp  main.c  main.cpp  norootlink.c  norootlink.cpp  noxattrs.cpp  rootlink.cpp  rootshim.c  rootshim.cpp
emulate_swap_tool/: emulate_swap.c  emulate_swap.cpp  emulate_swap_main.c  emulate_swap_main.cpp
fastpath/: fastpath.cpp  fastpath_preload.c  fastpath_preload_core.c  fastpath_preload_event.c  fastpath_preload_fd.c  fastpath_preload_file.c  fastpath_preload_fortify.c  fastpath_preload_mem.c  fastpath_preload_process.c  fastpath_preload_readwrite.c  fastpath_preload_readwrite_fortify.c  fastpath_preload_sendrecv.c  fastpath_preload_sendrecv_fortify.c  fastpath_preload_socket.c  fastpath_preload_vdso.c
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
include/: _syscall_trampo.h  androidislinux.h  base_types.h  bottomhandler.h  callhandler.h  common.h  config.h  debug.h  emulate_file_tmp.h  emulate_swap.h  execve_here.h  execve_thread.h  fastpath.h  fastpath_preload.h  handle_syscall.h  hardlinkshim.h  intercept.h  loader.h  manglepaths.h  mprotect.h  myelf.h  mylist.h  mylock.h  mynolibc.h  myseccomp-aarch64.h  myseccomp-x86_64.h  myseccomp.h  mysignal.h  mysocket.h  mysys.h  mytypes.h  noxattrs.h  pagesize.h  parent.h  parent_close.h  parent_exec.h  parent_link.h  parent_xattr.h  rmap.h  rootlink.h  (+19 more)
include/linux-headers/: readme.txt
include/linux-headers/aarch64/include/asm/: ..install.cmd
include/linux-headers/aarch64/include/asm-generic/: ..install.cmd
include/linux-headers/aarch64/include/drm/: ..install.cmd
include/linux-headers/aarch64/include/linux/: ..install.cmd
include/linux-headers/aarch64/include/linux/android/: ..install.cmd
include/linux-headers/aarch64/include/linux/byteorder/: ..install.cmd
include/linux-headers/aarch64/include/linux/caif/: ..install.cmd
include/linux-headers/aarch64/include/linux/can/: ..install.cmd
include/linux-headers/aarch64/include/linux/cifs/: ..install.cmd
include/linux-headers/aarch64/include/linux/dvb/: ..install.cmd
include/linux-headers/aarch64/include/linux/genwqe/: ..install.cmd
include/linux-headers/aarch64/include/linux/hdlc/: ..install.cmd
include/linux-headers/aarch64/include/linux/hsi/: ..install.cmd
include/linux-headers/aarch64/include/linux/iio/: ..install.cmd
include/linux-headers/aarch64/include/linux/isdn/: ..install.cmd
include/linux-headers/aarch64/include/misc/: ..install.cmd
include/linux-headers/aarch64/include/mtd/: ..install.cmd
include/linux-headers/aarch64/include/rdma/: ..install.cmd
include/linux-headers/aarch64/include/scsi/: ..install.cmd
include/linux-headers/aarch64/include/sound/: ..install.cmd
include/linux-headers/aarch64/include/video/: ..install.cmd
include/linux-headers/aarch64/include/xen/: ..install.cmd
include/linux-headers/arm/include/asm/: ..install.cmd
include/linux-headers/arm/include/asm-generic/: ..install.cmd
include/linux-headers/arm/include/drm/: ..install.cmd
include/linux-headers/arm/include/linux/: ..install.cmd
include/linux-headers/arm/include/misc/: ..install.cmd
include/linux-headers/arm/include/mtd/: ..install.cmd
include/linux-headers/arm/include/rdma/: ..install.cmd
include/linux-headers/arm/include/scsi/: ..install.cmd
include/linux-headers/arm/include/sound/: ..install.cmd
include/linux-headers/arm/include/video/: ..install.cmd
include/linux-headers/arm/include/xen/: ..install.cmd
include/linux-headers/i386/include/asm/: ..install.cmd
include/linux-headers/i386/include/asm-generic/: ..install.cmd
include/linux-headers/i386/include/drm/: ..install.cmd
include/linux-headers/i386/include/linux/: ..install.cmd
include/linux-headers/i386/include/misc/: ..install.cmd
include/linux-headers/i386/include/mtd/: ..install.cmd
include/linux-headers/i386/include/rdma/: ..install.cmd
include/linux-headers/i386/include/scsi/: ..install.cmd
include/linux-headers/i386/include/sound/: ..install.cmd
include/linux-headers/i386/include/video/: ..install.cmd
include/linux-headers/i386/include/xen/: ..install.cmd
include/linux-headers/x86_64/include/asm/: ..install.cmd
include/linux-headers/x86_64/include/asm-generic/: ..install.cmd
include/linux-headers/x86_64/include/drm/: ..install.cmd
include/linux-headers/x86_64/include/linux/: ..install.cmd
include/linux-headers/x86_64/include/misc/: ..install.cmd
include/linux-headers/x86_64/include/mtd/: ..install.cmd
include/linux-headers/x86_64/include/rdma/: ..install.cmd
include/linux-headers/x86_64/include/scsi/: ..install.cmd
include/linux-headers/x86_64/include/sound/: ..install.cmd
include/linux-headers/x86_64/include/video/: ..install.cmd
include/linux-headers/x86_64/include/xen/: ..install.cmd
include/nolibc/: arch-aarch64.h  arch-arm.h  arch-i386.h  arch-riscv.h  arch-x86_64.h  crt.h  itoa.h  std.h  stdio.h  stdlib.h  string.h  sys.h  t.mbox  types.h
libexecve_thread_jni/: build.gradle
linux_api_tests/: .gitignore  mywrappers.h  proc_self_maps.c  proc_self_maps.cpp  rlimit_nofile.c  rlimit_nofile.cpp  test.sh
passthrough_bench_tool/: passthrough_bench_main.cpp
socket_timeout_tool/: socket_timeout.cpp  socket_timeout_main.cpp
syscall_log_tool/: syscall_log.cpp  syscall_log_main.cpp
(+108 files in other folders)
